[package]
name = "echo_server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }
log = "0.4.22"
pretty_env_logger = "0.4"

[dev-dependencies]
hyper = { version = "0.14", features = ["client", "runtime"] }
tokio = { version = "1", features = ["full"] }
